--- a/web/web/styles.css
+++ b/web/web/styles.css
@@ -1,8 +1,12 @@
+html {height: 100%;}
+
 body {
+    height: 100%;
     background-color: #F8F8F8;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     font-weight: normal;
     line-height: 1.2em;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
 }
