--- a/web/lib/app_component.css
+++ b/web/lib/app_component.css
@@ -17,7 +17,11 @@
 }
 
 .content {
-  height: calc(100% - 56px);
+  height: calc(100% - 56px - 56px);
   overflow: auto;
   padding: 20px;
+}
+
+.content-footer {
+  height: 56px;
 }
