--- a/web/lib/src/message_input/message_input.css
+++ b/web/lib/src/message_input/message_input.css
@@ -1,3 +1,12 @@
 .wrapper {
   height: 56px;
 }
+
+input {
+  width: 100%;
+  height: 56px;
+  font-size: 16px;
+  padding: 0px 12px;
+  text-align: left;
+  vertical-align: middle;
+}
