--- a/web/lib/src/message_input/message_input.css
+++ b/web/lib/src/message_input/message_input.css
@@ -7,6 +7,7 @@ input {
   height: 56px;
   font-size: 16px;
   padding: 0px 12px;
-  text-align: left;
+  text-align: start;
   vertical-align: middle;
+  display: inline-block;
 }
