--- a/web/lib/app_component.css
+++ b/web/lib/app_component.css
@@ -6,18 +6,30 @@
 
 .header {
   height: 56px;
-  padding: 8px;
+  padding: 0px;
   vertical-align: middle;
+  display: flex;
 }
 
 .page {
   height: calc(100% - 56px);
-  width: 100%;
+  width: calc(100% - 256px);
+  float: right;
+  padding: 0;
+  margin: 0;
+  display: inline;
+}
 
+.nav {
+  height: calc(100% - 56px);
+  float: left;
+  width: 256px;
+  position: fixed;
+  display: inline;
 }
 
 .content {
-  height: calc(100% - 56px - 56px);
+  height: calc(100% - 56px - 56px - 20px);
   overflow: auto;
   padding: 20px;
 }
