--- a/web/lib/app_component.css
+++ b/web/lib/app_component.css
@@ -29,7 +29,7 @@
 }
 
 .content {
-  height: calc(100% - 56px - 56px - 20px);
+  height: calc(100% - 56px - 56px + 20px);
   overflow: auto;
   padding: 20px;
 }
