--- a/web/lib/src/components/app/app.html
+++ b/web/lib/src/components/app/app.html
@@ -1,13 +1,13 @@
-<div class="container bg-material">
+<div class="container bg-material" *ngIf="platform.initialized">
   <header class="header primary-material tall-shadow">
       <h1>Chatty</h1>
   </header>
   <div class="nav short-shadow fg-material">
-    <room-list #roomList></room-list>
+    <room-list></room-list>
   </div>
   <section class="page">
     <div class="content">
-      <room-messages [roomRef]="roomList?.selectedRoom"></room-messages>
+      <room-messages></room-messages>
     </div>
     <div class="content-footer">
       <message-input></message-input>
