Make things properly load data.

--- a/web/lib/src/components/room_list/room_list.html
+++ b/web/lib/src/components/room_list/room_list.html
@@ -1,5 +1,5 @@
 <div class="list" *ngFor="let roomRef of roomRefs">
-  <span>{{roomRef.id}}</span>
+  <span>{{roomRef.uid}}</span>
   <br/>
   <span>{{roomRef.name}}</span>
 </div>
