--- a/web/lib/src/components/app/app.html
+++ b/web/lib/src/components/app/app.html
@@ -1,3 +1,4 @@
+<div class="container" *ngIf="!initialized"><p>loading...</p></div>
 <div class="container bg-material" *ngIf="initialized">
   <header class="header primary-material tall-shadow">
       <h1>Chatty</h1>
