--- a/web/lib/src/components/app/app.css
+++ b/web/lib/src/components/app/app.css
@@ -8,7 +8,7 @@
   height: 56px;
   padding: 0px;
   vertical-align: middle;
-  display: flex;
+  display: block;
 }
 
 .page {
@@ -17,21 +17,17 @@
   float: right;
   padding: 0;
   margin: 0;
-  display: inline;
 }
 
 .nav {
-  height: calc(100% - 56px);
+  height: calc(100% - 52px);
   float: left;
   width: 256px;
-  position: fixed;
-  display: inline;
 }
 
 .content {
-  height: calc(100% - 56px - 56px + 20px);
+  height: calc(100% - 56px);
   overflow: auto;
-  padding: 20px;
 }
 
 .content-footer {
