--- a/web/lib/src/components/room_messages/room_messages.html
+++ b/web/lib/src/components/room_messages/room_messages.html
@@ -1,6 +1,11 @@
-<div *ngFor="let message of messages">
-  <div class="message fg-material short-shadow" *ngIf="message != null" [class.from-me]="isFromMe(message)" >
-    <p class="faded-text">{{message.sender.name}}</p>
-    <p>{{message.contents}}</p>
+<div class="container">
+  <div *ngFor="let message of messages">
+    <div
+        class="message fg-material short-shadow"
+        *ngIf="message != null"
+        [class.from-me]="isFromMe(message)" >
+      <p class="faded-text">{{message.sender.name}}</p>
+      <p>{{message.contents}}</p>
+    </div>
   </div>
 </div>
